--- a/about-team.html
+++ b/about-team.html
@@ -198,7 +198,7 @@ input[type=submit] {
     <div class="card">
       <img src="img3.jpg" alt="John" style="width:100%">
       <div class="container">
-        <h2>Andrew</h2>
+        <h2>Awet </h2>
         <p class="title">Designer</p>
         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
         <p>example@example.com</p>
