--- a/games.html
+++ b/games.html
@@ -1,1 +1,46 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Game</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
+</head>
+<body>
+	<header>
+			<a href="#"><h2 id="logo">Covid Warriors</h2></a>
+			<nav>
+				<ul class="link">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="gallery.html">Gallery</a></li>
+					<li><a href="Articles.html">Articles</a></li>
+					<li><a href="about-covid.html">About</a></li>
+					<li><a href="india_tracker.html">tracker</a></li>
+				</ul>
+			</nav>
+			<a href="#"><button id="cont">Contact</button></a>
+	</header>
+
+	<section id="banner">
+			<h1>Covid Games</h1>
+	</section>
+
+	<section class="tabs">
+
+			<h2 style="color: white; background-color: black; display: flex; justify-content: center;">1.<u> Covid Flipper </u></h2>
+			<p style="color: white; background-color: black; display: flex; justify-content: center;"><i>Flip and Match the images to find out what promotes Covid Spread</i></p>
+
+		<script type="text/javascript" src="js/script.js"></script>
+			<h3 style="color: black; margin-bottom: 10px"><u>Score:</u><span id="result"></span></h3>
+		<div class="grid"> </div>
+
+	</section>
+		
+	<footer>
+		<!--For bottom size change, refer to .tabs selector in stylesheet.css file. Change the height property their-->
+	</footer>
+
+			
+</body>
+</html>
